--- a/looping/for.html
+++ b/looping/for.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Belajar Loping</title>
+    <title>Belajar Looping</title>
     <script>
         for(let i = 0; i < 10; i++){
             document.write("<p>Perulangan ke-" + i + "</p>")
